<resources>
    <string name="app_name">Phone Update - Software Update</string>
    <string name="no_launcher">No Launcher</string>
    <string name="software_update_app">Software Update App</string>
    <string name="view_more">View Apps</string>
    <string name="other_feature">Other Feature</string>
    <string name="android_system_update">Android System update</string>
    <string name="features">Features</string>
    <string name="available_for_update">Available for update</string>
    <string name="_52_apps_are"> Apps Are</string>
    <string name="update">Update…</string>
    <string name="start_nscan">START\n SCAN </string>
    <string name="scanning">SCAN\n NING</string>
    <string name="scanned">SCANNED</string>
    <string name="upside_down_cake">Upside Down Cake</string>
    <string name="android_14">Android 14</string>
    <string name="search_name">Search Name</string>
    <string name="android_versions">Android Versions</string>
    <string name="system_applications">System Applications</string>
    <string name="check">Check</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="available_updates">Available Updates</string>
    <string name="uninstall">Uninstall</string>
    <string name="_0">0</string>
    <string name="uninstall_apps">"UnInstall Apps "</string>
    <string name="total_apps_count">Total Apps (%1$d)</string>
    <string name="launch">Launch</string>
    <string name="share">Share</string>
    <string name="view_on_play_store">VIEW ON PLAY STORE</string>
    <string name="app_version">App Version</string>
    <string name="_12_2_2002">12.2.2002</string>
    <string name="last_updated">Last Updated</string>
    <string name="dex_21_2008">Dex 21,2008</string>
    <string name="ad">Ad</string>
    <string name="janbark_task">JanBark Task</string>
    <string name="large_notification_showing_a_title_and_a_body">Large notification, showing a title and a body.</string>
    <string name="this_is_the_body_the_height_is_manually_forced_to_300dp">This is the body. The height is manually forced to 300dp.</string>
    <string name="open">Open</string>
    <string name="permission_not_allowed">Permissions Not Allowed</string>
    <string name="no_data_available">No Data Available</string>
    <string name="need_permission">You need to give storage permission in order to get all Images files.</string>
    <string name="allow">Allow</string>
    <string name="dont_allow">Don\'t Allow</string>
    <string name="ad_clicked">Ad clicked.</string>
    <string name="ad_dismissed_fullscreen_content">Ad dismissed fullscreen content.</string>
    <string name="ad_failed_to_show_fullscreen_content">Ad failed to show fullscreen content.</string>
    <string name="ad_recorded_an_impression">Ad recorded an impression.</string>
    <string name="ad_showed_fullscreen_content">Ad showed fullscreen content.</string>
    <string name="the_interstitial_ad_wasn_t_ready_yet">The interstitial ad wasn\'t ready yet.</string>
    <string name="native_ad_loaded">Native Ad Loaded</string>
    <string name="failed_to_load_native_ad_with_error">Failed to load native ad with error %1$s</string>
    <string name="analyze_the_risk_state_of_each_app">Analyze the risk state of each app</string>
    <string name="app_permissions">App Permissions</string>
    <string name="high_permission_app">High permission app</string>
    <string name="app_declared_as_high_risk_permission">App Declared as High Risk Permission</string>
    <string name="privacy_manager">Privacy Manager</string>
    <string name="high_risk">High Risk</string>
    <string name="app_privacy">App Privacy</string>
    <string name="high_risk_apps">High Risk Apps</string>
    <string name="avg_risk_apps">Avg Risk Apps</string>
    <string name="low_risk_apps">Low Risk Apps</string>
    <string name="_40">0%</string>
    <string name="average_risk">Average Risk</string>
    <string name="low_risk">Low Risk</string>
    <string name="avg_risk">Avg Risk</string>
    <string name="percentage_placeholder">%s%%</string>
    <string name="_0_apps">0</string>
    <string name="no_ads">No Ads</string>
    <string name="fast_processing">Fast Processing</string>
    <string name="screen_time_usage">Screen Time Usage</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="home">Home</string>
    <string name="languages">Languages</string>
    <string name="change_app_theme">Change App theme</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="more_apps_ad">More Apps (Ad)</string>
    <string name="rate_us">Rate Us</string>
    <string name="go_premium">Go Premium</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="choose_languages">Choose Languages</string>
    <string name="permission_denied">Permission denied</string>
    <string name="continue_btn">Continue</string>
    <string name="no_apps_selected_for_uninstallation">No apps selected for uninstallation</string>
    <string name="check_for_downloaded_app_updates">Check for downloaded app updates</string>
    <string name="delete_unnecessary_apps">Delete all unnecessary\n Apps</string>
    <string name="track_your_device_screen_time">Track your device screen time</string>
    <string-array name="privacy_manager_array" translatable="false">
        <item>High Risk</item>
        <item>Avg Risk</item>
        <item>Low Risk</item>
    </string-array>
    <string-array name="privacy_manager_array_progress_text" translatable="false">
        <item>High Risk Apps</item>
        <item>Average Risk Apps</item>
        <item>Low Risk Apps</item>
    </string-array>
    <string name="privacy_policy_link" translatable="false">https://atonomushubofficial.blogspot.com/2024/08/privacy-policy.html</string>
    <string name="more_app_link" translatable="false">https://play.google.com/store/apps/dev?id=7068253360089619762</string>
    <string name="version_1_detail" translatable="false">"<b><span style='font-size:18sp;'>Overview</span></b>\n\nAndroid made its official public debut in 2008 with Android 1.0, marking the beginning of the Android operating system. This initial release lacked a cute codename."
                        "\n\nAndroid 1.1 (API 2):\n\nReleased on February 9, 2009, the Android 1.1 update, internally known as \"Petit Four,\" was initially available for the HTC Dream. This update addressed bugs, made changes to the Android API, and introduced new features, laying the foundation for the evolution of the Android platform.\n\n<b><span style='font-size:18sp;'>Detail</span></b>\n\nThis Android version introduced several notable features. The Android Market facilitated application downloads and updates, while the web browser allowed the viewing of full HTML and XHTML web pages through multiple windows. Camera support was present, but customization options were limited. Folders were introduced for organizing app icons on the Home screen."
                        "Email services included access to web servers and synchronization with Gmail, Google Contacts, and Google Calendar. Google Maps with Street View provided map and satellite imagery, while Google Sync managed over-the-air synchronization. The device supported Wi-Fi and Bluetooth, and the media player allowed management and playback of media files, excluding video and stereo Bluetooth support."
                        "Notifications appeared in the Status bar with customizable alerts. Messaging options encompassed instant messaging, text messaging, and MMS. The voice dialer enabled hands-free calling, and users could set wallpapers behind Home screen icons. Other applications included YouTube, Alarm Clock, Calculator, Dialer, Home screen, Pictures, and Settings. Connectivity details were available when searching for businesses on Maps. Additionally, enhancements included a longer in-call screen timeout, dial-pad show/hide functionality, attachment saving in messages, and support for marquee in system layouts."</string>
    <string name="version_1.5_detail" translatable="false">"<b><span style='font-size:18sp;'>Overview</span></b>\nThe inception of Android version names dates back to the early 2009 release of Android 1.5 Cupcake. This milestone brought about several enhancements to the Android interface, notably introducing the inaugural on-screen keyboard. This innovation became essential as phones transitioned away from the previously prevalent physical keyboard model.\n\n<b><span style='font-size:18sp;'>Detail</span></b>\nSupport for third-party virtual keyboards with text prediction and a user dictionary for custom words.\nSupport for Widgets – miniature application views that can be embedded in other applications (such as the Home screen) and receive periodic updates.\nVideo recording and playback in MPEG-4 and 3GP formats.\nAuto-pairing and stereo support for Bluetooth (A2DP and AVRCP profiles).\nCopy and paste features in the web browser.\nUser pictures shown for Favorites in Contacts.\nSpecific date/time stamp shown for events in the call log, and one-touch access to a contact card from a call log event.\nAnimated screen transitions.\nAuto-rotation option.\nNew stock boot animation.\nAbility to upload videos to YouTube.\nAbility to upload photos to Picasa.\nAbility to check phone usage history."</string>
    <string name="version_1.6_detail" translatable="false"><b><span style='font-size:18sp;'>Overview</span></b>\n\nOn September 15, 2009, Android 1.6, named Donut and built on Linux kernel 2.6.29, was released, introducing numerous features. Notable enhancements included a refined interface, the Quick Search Box for swift device and web searches, and Voice Search functionality. The Android Market received updates for better app organization, and camera and camcorder functionalities were improved.\n\n<b><span style='font-size:18sp;'>Detail</span></b>\n\nVoice and text entry search was enhanced in Android 1.6.\nDonut now including bookmark history, contacts, and web results.\nDevelopers gained the ability to include their content in search results, expanding the reach and integration of applications.\nThe release featured a multi-lingual speech synthesis engine, enabling any Android application to "speak" a string of text.Android Market improvements allowed for easier searching and the ability to view app screenshots, enhancing the user experience.\nThe Gallery, Camera, and camcorder functions were more fully integrated, offering faster camera access and the capability for users to select multiple photos for deletion\n.Technical support received updates for CDMA/EVDO, 802.1x, VPNs, and a text-to-speech engine, enhancing connectivity and accessibility features\n.Donut introduced support for WVGA screen resolutions.\n</string>
    <string name="no_internet">No Internet</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="no_match_found">No match found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_info">Device Info</string>
    <string name="name">Name</string>
    <string name="vivo">Vivo</string>
    <string name="model">Model</string>
    <string name="ram">Ram</string>
    <string name="version">Version</string>
    <string name="storage">Storage</string>
    <string name="deviceid">Device ID</string>
    <string name="allow_">Allow</string>
    <string name="deny">Deny</string>
    <string name="this_app_needs">This app needs access to your app usage data to optimize software update</string>
    <string name="usage_access_required">Usage Access Required</string>
    <string name="screen_time_usage_">Screen Time Usage</string>
    <string name="sep_01_sep_07">sep</string>
    <string name="_91_times">91_times\n</string>
    <string name="_13_min">13_min\n</string>
    <string name="app_name_">app_name\n</string>
    <string name="feedback">Feedback</string>
</resources>