<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.installapps.InstalledAppDetailFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:fontFamily="@font/poppins_medium"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_app_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_app_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:fontFamily="@font/poppins_medium"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/un_install_btn_shape"
        android:backgroundTint="@color/btn_grey_bg_color"
        app:layout_constraintEnd_toStartOf="@id/layout_last_updated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_size">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/poppins_medium"
            android:singleLine="true"
            android:text="@string/app_version"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toTopOf="@+id/tv_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="@font/poppins_medium"
            android:singleLine="true"
            android:text="@string/_12_2_2002"
            android:textColor="@color/white"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_version" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_last_updated"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/un_install_btn_shape"
        android:backgroundTint="@color/btn_grey_bg_color"
        app:layout_constraintBottom_toBottomOf="@id/layout_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_version"
        app:layout_constraintTop_toTopOf="@id/layout_version">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_last_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/poppins_medium"
            android:singleLine="true"
            android:text="@string/last_updated"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toTopOf="@+id/tv_last_updated"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_last_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="@font/poppins_medium"
            android:singleLine="true"
            android:text="@string/dex_21_2008"
            android:textColor="@color/white"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_last_updated" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/nativeCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_3sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_view_on_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_version"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@android:color/holo_red_dark"
        app:strokeWidth="1dp">

        <FrameLayout
            android:id="@+id/nativeAd"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_on_store"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:backgroundTint="@color/green_color"
        android:elevation="@dimen/_5sdp"
        android:text="@string/view_on_play_store"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintBottom_toTopOf="@+id/btn_launch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_launch"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:background="@drawable/circular_bg_shape"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@+id/tv_launch"
        app:layout_constraintEnd_toEndOf="@+id/tv_launch"
        app:layout_constraintStart_toStartOf="@+id/tv_launch"
        app:srcCompat="@drawable/baseline_rocket_launch_24" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_share"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:background="@drawable/circular_bg_shape"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@+id/tv_share"
        app:layout_constraintEnd_toEndOf="@+id/tv_share"
        app:layout_constraintStart_toStartOf="@+id/tv_share"
        app:srcCompat="@drawable/share" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/launch"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_share"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_launch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_launch"
        app:layout_constraintTop_toTopOf="@+id/tv_launch" />

</androidx.constraintlayout.widget.ConstraintLayout>